# SpaceClones

./: .gitignore  CMakeLists.txt  CPackConfig.cmake.in  PKGBUILD  README.md  config.h.cmake  slgo
src/: Balas.cpp  CMakeLists.txt  alien.cpp  alien.h  alienSpawner.cpp  alienSpawner.h  assetCommon.cpp  assetCommon.h  assetGetter.cpp  assetGetter.h  bala.cpp  bala.h  balas.h  damageable.cpp  damageable.h  escudos.cpp  escudos.h  gameObject.cpp  gameObject.h  main.cpp  nave.cpp  nave.h  puntaje.cpp  puntaje.h  rigidBody.cpp  rigidBody.h  rigidObject.cpp  rigidObject.h  scene.cpp  scene.h  types.h
